--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -15,6 +15,7 @@
   </div>
   <form th:action="@{/login}" method="post" style="max-width: 350px; margin: 0 auto;">
 
+
     <div th:if="${param.error}">
       <p class="text-danger">[[${session.SPRING_SECURITY_LAST_EXCEPTION.message}]]</p>
     </div>
@@ -41,6 +42,11 @@
     <form th:action="@{/logout}" method="post">
       <input type="submit" value="Logout" class="btn btn-primary" />
     </form>
+    <br><br>
+    <div>
+      <h4><a th:href="@{/oauth2/authorization/google}">Login with Google</a></h4>
+    </div>
+
   </form>
 </div>
 </body>
